# trellis

./: .bazelrc  .clang-format  .deepsource.toml  .gitignore  CONTRIBUTING.md  MODULE.bazel  NOTICE  README.md  WORKSPACE  WORKSPACE.bazel
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/bazel-build/: action.yml
.github/actions/buildifier/: action.yml
.github/actions/clang-format/: action.yml
.github/actions/shellcheck/: action.yml
.github/workflows/: main.yaml  publish.yml
docker/: Dockerfile  README.md  build.sh  ecal.ini  entrypoint.sh  shell.sh
docker/scripts/: ci_build_and_test  run_buildifier  run_clang_format  run_shellcheck
trellis/: BUILD  BUILD.bazel  cc_hdrs.bzl
trellis/containers/: BUILD  BUILD.bazel  dynamic_ring_buffer.hpp  fifo.hpp  memory_pool.hpp  multi_fifo.hpp  ring_buffer.hpp  transforms.cpp  transforms.hpp
trellis/containers/test/: BUILD  BUILD.bazel  dynamic_ring_buffer_test.cpp  ring_buffer_test.cpp  test_fifo.cpp  test_memory_pool.cpp  test_multi_fifo.cpp  test_transforms.cpp
trellis/core/: BUILD  BUILD.bazel  affine_transform.proto  bind.hpp  config.cpp  config.hpp  constants.hpp  constraints.hpp  converters.hpp  crash_counter.cpp  crash_counter.hpp  error_code.hpp  event_loop.hpp  health.cpp  health.hpp  health_history.proto  health_monitor.cpp  health_monitor.hpp  health_status.proto  inbox.hpp  logging.cpp  logging.hpp  message_consumer.hpp  monitor_interface.cpp  monitor_interface.hpp  monitoring_utils.cpp  monitoring_utils.hpp  node.cpp  node.hpp  outbox.hpp  proto_utils.hpp  publisher.hpp  quaternion.proto  rigid_transform.proto  service_client.hpp  service_server.hpp  stamped_message.hpp  subscriber.hpp  subscriber_base.hpp  time.cpp  (+9 more)
trellis/core/discovery/: BUILD.bazel  descriptor_store.cpp  descriptor_store.hpp  discovery.cpp  discovery.hpp  types.hpp  utils.cpp  utils.hpp
trellis/core/discovery/pb/: BUILD.bazel  layer.proto  process.proto  sample.proto  service.proto  topic.proto
trellis/core/discovery/test/: BUILD.bazel  descriptor_store_test.cpp  discovery_test.cpp
trellis/core/ipc/: BUILD.bazel  named_resource_registry.hpp  utils.hpp
trellis/core/ipc/proto/: BUILD.bazel  dynamic_message_cache.cpp  dynamic_message_cache.hpp
trellis/core/ipc/proto/rpc/: BUILD.bazel  client.hpp  server.hpp  types.hpp
trellis/core/ipc/proto/rpc/test/: BUILD.bazel  client_server_test.cpp
trellis/core/ipc/proto/test/: BUILD.bazel  dynamic_message_cache_test.cpp
trellis/core/ipc/shm/: BUILD.bazel  shm_file.cpp  shm_file.hpp  shm_read_write_lock.cpp  shm_read_write_lock.hpp  shm_reader.cpp  shm_reader.hpp  shm_writer.cpp  shm_writer.hpp
trellis/core/ipc/unix/: BUILD.bazel  socket_event.cpp  socket_event.hpp
trellis/core/ipc/unix/test/: BUILD.bazel  socket_event_test.cpp
trellis/core/statistics/: BUILD.bazel  frequency_calculator.hpp  latency_calculator.hpp
trellis/core/test/: BUILD  BUILD.bazel  bind_test.cpp  config_test.cpp  crash_counter_test.cpp  event_loop_test.cpp  health_monitor_test.cpp  health_test.cpp  inbox_test.cpp  message_consumer_test.cpp  node_test.cpp  outbox_test.cpp  proto_utils_test.cpp  pubsub_dynamic_test.cpp  pubsub_test.cpp  service_test.cpp  simtime_test.cpp  test.hpp  test.proto  test_base_config.yml  test_config.cpp  test_event_loop.cpp  test_fixture.hpp  test_health.cpp  test_health_monitor.cpp  test_message_consumer.cpp  test_node.cpp  test_overlay_config.yml  test_proto_utils.cpp  test_pubsub.cpp  test_service.cpp  test_simtime.cpp  test_subscriber.cpp  test_time.cpp  test_timer.cpp  test_transforms.cpp  time_test.cpp  timer_test.cpp  transforms_test.cpp
trellis/examples/: BUILD  addition_service.proto  config.yml  example_publisher.cpp  example_service_client.cpp  example_service_server.cpp  example_subscriber.cpp  hello_world.proto
trellis/examples/logger/: BUILD  main.cpp
trellis/examples/proto/: BUILD.bazel  addition_service.proto  hello_world.proto
trellis/examples/publisher/: BUILD  app.cpp  app.hpp  main.cpp
trellis/examples/service_client/: BUILD  app.cpp  app.hpp  main.cpp
trellis/examples/service_server/: BUILD.bazel  app.cpp  app.hpp  main.cpp
trellis/examples/subscriber/: BUILD  app.cpp  app.hpp  main.cpp
trellis/examples/transforms/: BUILD  app.cpp  app.hpp  main_a.cpp  main_b.cpp
trellis/network/: BUILD  BUILD.bazel  tcp.hpp  udp.hpp
trellis/network/test/: test_tcp.cpp  test_udp.cpp
trellis/tools/: BUILD  BUILD.bazel
trellis/tools/mma/: BUILD
trellis/tools/play_cli/: BUILD
trellis/tools/rec_client_cli/: BUILD
trellis/tools/sys_client_cli/: BUILD.bazel
trellis/tools/trellis-cli/: BUILD  BUILD.bazel  README.md  command_handlers.hpp  constants.hpp  main.cpp  monitoring_utils.cpp  monitoring_utils.hpp  topic_main.cpp
trellis/tools/trellis-cli/discovery/: discovery_dump_main.cpp  discovery_main.cpp
trellis/tools/trellis-cli/health/: health_info_main.cpp  health_list_main.cpp  health_main.cpp
trellis/tools/trellis-cli/node/: node_list_main.cpp  node_main.cpp
trellis/tools/trellis-cli/service/: service_call_main.cpp  service_info_main.cpp  service_list_main.cpp  service_main.cpp
trellis/tools/trellis-cli/topic/: topic_echo_main.cpp  topic_list_main.cpp  topic_main.cpp  topic_publish_main.cpp  topic_stream_main.cpp
trellis/tools/trellis-cli/topic/tui_components/: ui_stream_publisher.cpp  ui_stream_publisher.hpp  ui_stream_subscriber.cpp  ui_stream_subscriber.hpp
trellis/utils/formatting/: BUILD.bazel  table.hpp
trellis/utils/formatting/test/: BUILD.bazel  table_test.cpp
trellis/utils/mcap/: BUILD.bazel  mcap_impl.cpp  reader.hpp  writer.cpp  writer.hpp  writer_subscriber_data.hpp
trellis/utils/mcap/test/: BUILD.bazel  mcap_reader_test.cpp  mcap_writer_test.cpp  test_mcap_writer.cpp
trellis/utils/metrics_pub/: BUILD.bazel  generic_metrics.proto  metrics_publisher.cpp  metrics_publisher.hpp
trellis/utils/metrics_pub/test/: BUILD.bazel  metrics_pub_sub_test.cpp
trellis/utils/protobuf/: BUILD.bazel  file_descriptor.hpp
trellis/utils/umask_guard/: BUILD.bazel  umask_guard.hpp
