load("@rules_pkg//:pkg.bzl", "pkg_tar")
load(":cc_hdrs.bzl", "cc_hdrs_filegroup")

cc_library(
    name = "trellis",
    visibility = ["//visibility:public"],
    deps = [
        "//trellis/containers",
        "//trellis/core",
        "//trellis/network",
    ],
)

# Shared library enabling trellis applications to be built in separate projects
# with their own build systems (CMake, Make, etc.) by linking against libtrellis.so.
cc_shared_library(
    name = "trellis_shared",
    shared_lib_name = "libtrellis.so",
    visibility = ["//visibility:public"],
    deps = [
        ":trellis",
    ],
)

# Package shared library
pkg_tar(
    name = "libtrellis_lib_tar",
    srcs = [":trellis_shared"],
    package_dir = "lib",
)

# Package trellis headers. When adding new modules to trellis, add the
# corresponding :srcs filegroup here so external projects can include them.
pkg_tar(
    name = "libtrellis_headers_tar",
    srcs = [
        "//trellis/containers:srcs",
        "//trellis/core:srcs",
        "//trellis/core/discovery:srcs",
        "//trellis/core/ipc:srcs",
        "//trellis/core/ipc/proto:srcs",
        "//trellis/core/ipc/proto/rpc:srcs",
        "//trellis/core/ipc/shm:srcs",
        "//trellis/core/ipc/unix:srcs",
        "//trellis/core/statistics:srcs",
        "//trellis/network:srcs",
        "//trellis/utils/formatting:srcs",
        "//trellis/utils/mcap:srcs",
        "//trellis/utils/metrics_pub:srcs",
        "//trellis/utils/protobuf:srcs",
        "//trellis/utils/umask_guard:srcs",
    ],
    package_dir = "include/trellis",
    strip_prefix = "/trellis",
)

# Re-export hdrs from BCR cc_libraries as filegroups so pkg_tar can package them.
cc_hdrs_filegroup(
    name = "asio_headers",
    deps = ["@asio"],
)

cc_hdrs_filegroup(
    name = "fmt_headers",
    deps = ["@fmt"],
)

cc_hdrs_filegroup(
    name = "yaml_cpp_headers",
    deps = ["@yaml-cpp"],
)

# Package asio headers
pkg_tar(
    name = "asio_headers_tar",
    srcs = [":asio_headers"],
    package_dir = "include",
    strip_prefix = "/external/asio~/asio/include",
)

# Package fmt headers
pkg_tar(
    name = "fmt_headers_tar",
    srcs = [":fmt_headers"],
    package_dir = "include",
    strip_prefix = "/external/fmt~/include",
)

# Package yaml-cpp headers
pkg_tar(
    name = "yaml_cpp_headers_tar",
    srcs = [":yaml_cpp_headers"],
    package_dir = "include",
    strip_prefix = "/external/yaml-cpp~/include",
)

# Package generated protobuf headers. When adding new proto targets to trellis,
# add the corresponding cc_proto_library here so external projects get the
# generated .pb.h files.
pkg_tar(
    name = "proto_headers_tar",
    srcs = [
        "//trellis/core:core_proto",
        "//trellis/core/discovery/pb:cc_proto",
        "//trellis/utils/metrics_pub:cc_generic_metrics",
    ],
    package_dir = "include",
    strip_prefix = "/_virtual_includes",
)

# Combine into final tarball for external (non-Bazel) consumers such as the
# isaac_sim extensions (simulation/isaacsim/).
pkg_tar(
    name = "libtrellis_tarball",
    extension = "tar.gz",
    visibility = ["//visibility:public"],
    deps = [
        ":asio_headers_tar",
        ":fmt_headers_tar",
        ":libtrellis_headers_tar",
        ":libtrellis_lib_tar",
        ":proto_headers_tar",
        ":yaml_cpp_headers_tar",
    ],
)
