cc_library(
    name = "containers",
    srcs = [
        "transforms.cpp",
    ],
    hdrs = [
        "fifo.hpp",
        "memory_pool.hpp",
        "multi_fifo.hpp",
        "transforms.hpp",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//trellis/core:core_time",
        "@eigen",
    ],
)
