cc_library(
    name = "containers",
    srcs = [
        "transforms.cpp",
    ],
    hdrs = [
        "fifo.hpp",
        "memory_pool.hpp",
        "multi_fifo.hpp",
        "transforms.hpp",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//trellis/core:core_time",
        "@eigen",
        "@fmt",
    ],
)

cc_library(
    name = "ring_buffer",
    hdrs = ["ring_buffer.hpp"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "dynamic_ring_buffer",
    hdrs = ["dynamic_ring_buffer.hpp"],
    visibility = ["//visibility:public"],
)
