cc_library(
    name = "core",
    visibility = ["//visibility:public"],
    deps = [
        ":core_bind",
        ":core_config",
        ":core_error_code",
        ":core_event_loop",
        ":core_health",
        ":core_health_monitor",
        ":core_inbox",
        ":core_logging",
        ":core_message_consumer",
        ":core_node",
        ":core_proto",
        ":core_proto_utils",
        ":core_publisher",
        ":core_subscriber",
        ":core_time",
        ":core_transforms",
    ],
)

cc_library(
    name = "core_bind",
    hdrs = [
        "bind.hpp",
    ],
    visibility = ["//visibility:public"],
    deps = [
    ],
)

cc_library(
    name = "core_error_code",
    hdrs = [
        "error_code.hpp",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@asio",
    ],
)

cc_library(
    name = "core_event_loop",
    hdrs = [
        "event_loop.hpp",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@asio",
    ],
)

cc_library(
    name = "core_proto_utils",
    hdrs = [
        "proto_utils.hpp",
    ],
    visibility = ["//visibility:public"],
    deps = [
    ],
)

cc_library(
    name = "core_timer",
    srcs = [
        "timer.cpp",
    ],
    hdrs = [
        "timer.hpp",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":core_error_code",
        ":core_event_loop",
        ":core_time",
        "@asio",
    ],
)

cc_library(
    name = "core_config",
    srcs = [
        "config.cpp",
    ],
    hdrs = [
        "config.hpp",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":core_logging",
        "@fmt",
        "@yaml-cpp",
    ],
)

cc_library(
    name = "core_time",
    srcs = [
        "time.cpp",
    ],
    hdrs = [
        "time.hpp",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":core_proto",
        ":core_time_types",
    ],
)

cc_library(
    name = "core_time_types",
    hdrs = [
        "time_types.hpp",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "core_logging",
    srcs = [
        "logging.cpp",
    ],
    hdrs = [
        "logging.hpp",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@fmt",
    ],
)

cc_library(
    name = "core_node",
    srcs = [
        "node.cpp",
    ],
    hdrs = [
        "node.hpp",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":core_bind",
        ":core_config",
        ":core_event_loop",
        ":core_health",
        ":core_proto_utils",
        ":core_publisher",
        ":core_subscriber",
        "//trellis/core/ipc:named_resource_registry",
        "//trellis/core/ipc/proto/rpc:client",
        "//trellis/core/ipc/proto/rpc:server",
    ],
)

cc_library(
    name = "core_stamped_message",
    hdrs = ["stamped_message.hpp"],
    visibility = ["//visibility:public"],
    deps = [":core_subscriber"],
)

cc_library(
    name = "core_transforms",
    srcs = [
        "transforms.cpp",
    ],
    hdrs = [
        "transforms.hpp",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":core_config",
        ":core_message_consumer",
        ":core_node",
        "//trellis/containers",
    ],
)

cc_library(
    name = "core_message_consumer",
    hdrs = [
        "message_consumer.hpp",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":core_node",
        ":core_stamped_message",
        ":core_subscriber",
        "//trellis/containers",
    ],
)

cc_library(
    name = "core_inbox",
    hdrs = ["inbox.hpp"],
    visibility = ["//visibility:public"],
    deps = [
        ":core_node",
        ":core_stamped_message",
        "//trellis/containers:dynamic_ring_buffer",
        "//trellis/containers:ring_buffer",
    ],
)

cc_library(
    name = "core_publisher",
    hdrs = [
        "publisher.hpp",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//trellis/core/discovery",
        "//trellis/core/discovery:utils",
        "//trellis/core/ipc/shm:shm_writer",
    ],
)

cc_library(
    name = "core_subscriber",
    hdrs = [
        "subscriber.hpp",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":core_logging",
        ":core_time",
        ":core_timer",
        "//trellis/core/discovery",
        "//trellis/core/discovery:utils",
        "//trellis/core/ipc/proto:dynamic_message_cache",
        "//trellis/core/ipc/shm:shm_reader",
        "//trellis/utils/protobuf:file_descriptor",
        "@fmt",
    ],
)

cc_library(
    name = "core_health",
    srcs = [
        "health.cpp",
    ],
    hdrs = [
        "health.hpp",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":core_config",
        ":core_logging",
        ":core_publisher",
        ":core_timer",
    ],
)

cc_library(
    name = "core_health_monitor",
    srcs = [
        "health_monitor.cpp",
    ],
    hdrs = [
        "health_monitor.hpp",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":core_config",
        ":core_health",
        ":core_proto",
        ":core_subscriber",
    ],
)

proto_library(
    name = "core_proto_lib",
    srcs = [
        "health_history.proto",
        "health_status.proto",
        "quaternion.proto",
        "rigid_transform.proto",
        "timestamped_message.proto",
        "vector3.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:any_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

cc_proto_library(
    name = "core_proto",
    visibility = ["//visibility:public"],
    deps = [":core_proto_lib"],
)
