cc_library(
    name = "network",
    hdrs = [
        "tcp.hpp",
        "udp.hpp",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//trellis/core:core_error_code",
        "//trellis/core:core_event_loop",
    ],
)

cc_test(
    name = "test",
    srcs = [
        "test/test_tcp.cpp",
        "test/test_udp.cpp",
    ],
    deps = [
        ":network",
        "@com_google_googletest//:gtest_main",
    ],
)

filegroup(
    name = "srcs",
    srcs = glob(
        [
            "**/*.hpp",
            "**/*.h",
        ],
        exclude = ["**/test/**"],
    ),
    visibility = ["//trellis:__pkg__"],
)
