cc_test(
    name = "test_container_transforms",
    srcs = [
        "test_transforms.cpp",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//trellis/containers",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "test_multi_fifo",
    srcs = ["test_multi_fifo.cpp"],
    deps = [
        "//trellis/containers",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "test_fifo",
    srcs = ["test_fifo.cpp"],
    deps = [
        "//trellis/containers",
        "@com_google_googletest//:gtest_main",
    ],
)
