cc_library(
    name = "discovery",
    srcs = [
        "discovery.cpp",
    ],
    hdrs = [
        "discovery.hpp",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":descriptor_store",
        ":types",
        ":utils",
        "//trellis/core:core_config",
        "//trellis/core:core_event_loop",
        "//trellis/core:core_timer",
        "//trellis/network",
        "@fmt",
    ],
)

cc_library(
    name = "descriptor_store",
    srcs = [
        "descriptor_store.cpp",
    ],
    hdrs = [
        "descriptor_store.hpp",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//trellis/core:core_config",
        "//trellis/core:core_logging",
        "//trellis/core/ipc:utils",
        "//trellis/utils/umask_guard",
        "@fmt",
    ],
)

cc_library(
    name = "utils",
    srcs = [
        "utils.cpp",
    ],
    hdrs = [
        "utils.hpp",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":descriptor_store",
        ":types",
        "//trellis/core/ipc/proto/rpc:types",
    ],
)

cc_library(
    name = "types",
    hdrs = [
        "types.hpp",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//trellis/core/discovery/pb:cc_proto",
    ],
)

filegroup(
    name = "srcs",
    srcs = glob(
        [
            "**/*.hpp",
            "**/*.h",
        ],
        exclude = [
            "**/test/**",
            "**/pb/**",
        ],
    ),
    visibility = ["//trellis:__pkg__"],
)
