cc_library(
    name = "named_resource_registry",
    hdrs = ["named_resource_registry.hpp"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "srcs",
    srcs = glob(
        [
            "**/*.hpp",
            "**/*.h",
        ],
        exclude = ["**/test/**"],
    ),
    visibility = ["//trellis:__pkg__"],
)
