cc_library(
    name = "named_resource_registry",
    hdrs = ["named_resource_registry.hpp"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "utils",
    hdrs = ["utils.hpp"],
    visibility = ["//visibility:public"],
    deps = [
        "//trellis/core:core_config",
    ],
)

filegroup(
    name = "srcs",
    srcs = glob(
        [
            "**/*.hpp",
            "**/*.h",
        ],
        exclude = ["**/test/**"],
    ),
    visibility = ["//trellis:__pkg__"],
)
