cc_library(
    name = "frequency_calculator",
    hdrs = [
        "frequency_calculator.hpp",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//trellis/core:core_time",
    ],
)

filegroup(
    name = "srcs",
    srcs = glob(
        [
            "**/*.hpp",
            "**/*.h",
        ],
        exclude = ["**/test/**"],
    ),
    visibility = ["//trellis:__pkg__"],
)
