proto_library(
    name = "test_proto_lib",
    srcs = ["test.proto"],
)

cc_proto_library(
    name = "test_proto",
    visibility = ["//visibility:public"],
    deps = [":test_proto_lib"],
)

cc_library(
    name = "test_fixture",
    hdrs = ["test_fixture.hpp"],
    visibility = ["//visibility:public"],
    deps = [
        "//trellis/core:core_node",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "core_message_consumer_test",
    srcs = ["message_consumer_test.cpp"],
    deps = [
        ":test_fixture",
        ":test_proto",
        "//trellis/core:core_message_consumer",
    ],
)

cc_test(
    name = "core_node_test",
    srcs = ["node_test.cpp"],
    deps = [":test_fixture"],
)

cc_test(
    name = "core_pubsub_test",
    srcs = ["pubsub_test.cpp"],
    deps = [
        ":test_fixture",
        ":test_proto",
    ],
)

cc_test(
    name = "core_service_test",
    srcs = ["service_test.cpp"],
    deps = [
        ":test_fixture",
        ":test_proto",
    ],
)

cc_test(
    name = "core_timer_test",
    srcs = ["timer_test.cpp"],
    deps = [":test_fixture"],
)

cc_test(
    name = "core_time_test",
    srcs = ["time_test.cpp"],
    deps = [
        "//trellis/core:core_time",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "core_simtime_test",
    srcs = ["simtime_test.cpp"],
    deps = [
        ":test_fixture",
        ":test_proto",
        "//trellis/core:core_time",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "core_event_loop_test",
    srcs = ["event_loop_test.cpp"],
    deps = [
        "//trellis/core:core_event_loop",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "config_test_test",
    srcs = ["config_test.cpp"],
    data = [
        ":test_base_config.yml",
        ":test_overlay_config.yml",
    ],
    deps = [
        "//trellis/core:core_config",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "core_proto_utils_test",
    srcs = ["proto_utils_test.cpp"],
    deps = [
        "//trellis/core:core_proto_utils",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "core_health_test",
    srcs = ["health_test.cpp"],
    deps = [
        "//trellis/core:core_health",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "core_health_monitor_test",
    srcs = ["health_monitor_test.cpp"],
    deps = [
        "//trellis/core:core_health_monitor",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "core_transforms_test",
    srcs = ["transforms_test.cpp"],
    deps = [
        "//trellis/core:core_transforms",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "inbox_test",
    srcs = ["inbox_test.cpp"],
    deps = [
        ":test_fixture",
        ":test_proto",
        "//trellis/core:core_inbox",
    ],
)
