load("@rules_pkg//pkg:pkg.bzl", "pkg_tar")

pkg_tar(
    name = "trellis-cli-pkg",
    srcs = [":trellis-cli"],
    include_runfiles = True,
    mode = "0755",
    strip_prefix = "__none__",
)

cc_binary(
    name = "trellis-cli",
    srcs = [
        "command_handlers.hpp",
        "constants.hpp",
        "discovery/discovery_dump_main.cpp",
        "discovery/discovery_main.cpp",
        "health/health_info_main.cpp",
        "health/health_list_main.cpp",
        "health/health_main.cpp",
        "main.cpp",
        "node/node_list_main.cpp",
        "node/node_main.cpp",
        "service/service_info_main.cpp",
        "service/service_list_main.cpp",
        "service/service_main.cpp",
        "topic/topic_echo_main.cpp",
        "topic/topic_list_main.cpp",
        "topic/topic_main.cpp",
        "topic/topic_publish_main.cpp",
    ],
    linkstatic = False,
    visibility = ["//visibility:public"],
    deps = [
        "//trellis",
        "//trellis/core:core_proto_utils",
        "//trellis/core/discovery",
        "@cxxopts",
        "@json",
        "@variadic_table",
    ],
)
