cc_library(
    name = "umask_guard",
    hdrs = ["umask_guard.hpp"],
    visibility = ["//visibility:public"],
    deps = [
        "//trellis/core:core_logging",
    ],
)

filegroup(
    name = "srcs",
    srcs = glob(
        [
            "**/*.hpp",
            "**/*.h",
        ],
        exclude = ["**/test/**"],
    ),
    visibility = ["//trellis:__pkg__"],
)
