cc_test(
    name = "discovery_test",
    srcs = ["discovery_test.cpp"],
    deps = [
        "//trellis/core/discovery",
        "//trellis/core/discovery:utils",
        "//trellis/core/test:test_proto",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_test(
    name = "descriptor_store_test",
    srcs = ["descriptor_store_test.cpp"],
    deps = [
        "//trellis/core/discovery:descriptor_store",
        "@com_google_googletest//:gtest_main",
    ],
)
