cc_library(
    name = "types",
    hdrs = ["types.hpp"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "client",
    hdrs = ["client.hpp"],
    visibility = ["//visibility:public"],
    deps = [
        ":types",
        "//trellis/core:core_event_loop",
        "//trellis/core/discovery",
        "//trellis/network",
        "@com_google_protobuf//:protobuf",
    ],
)

cc_library(
    name = "server",
    hdrs = ["server.hpp"],
    visibility = ["//visibility:public"],
    deps = [
        ":types",
        "//trellis/core:core_event_loop",
        "//trellis/core/discovery",
        "@com_google_protobuf//:protobuf",
    ],
)

filegroup(
    name = "srcs",
    srcs = glob(
        [
            "**/*.hpp",
            "**/*.h",
        ],
        exclude = ["**/test/**"],
    ),
    visibility = ["//trellis:__pkg__"],
)
