cc_test(
    name = "dynamic_message_cache_test",
    srcs = ["dynamic_message_cache_test.cpp"],
    deps = [
        "//trellis/core:core_proto",
        "//trellis/core/discovery:utils",
        "//trellis/core/ipc/proto:dynamic_message_cache",
        "//trellis/core/test:test_proto",
        "//trellis/utils/protobuf:file_descriptor",
        "@com_google_googletest//:gtest_main",
    ],
)
